# learn_c

./: README.md  hello.c  xo.cpp
questionaire/: CMakeLists.txt  README.md  main.cpp
